--- a/wp-content/themes/astra-child/style.css
+++ b/wp-content/themes/astra-child/style.css
@@ -6,3 +6,16 @@
 */
 
 @import "../astra/style.css";
+.discount-amount{
+    position: absolute;
+    top: -10px;
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    padding-top: 13px;
+    color: #fff;
+    background-color: #de1d6c;
+    z-index: 1;
+}
